--- a/secret.yaml
+++ b/secret.yaml
@@ -1,10 +1,9 @@
-kind: Secret
 apiVersion: v1
+kind: Secret
 metadata:
-  name: example1
-  annotations:
-    avp.kubernetes.io/path: "secret/data/vplugin/supersecret1"
-    avp.kubernetes.io/kv-version: "1"
+  name: example-secret
+  # annotations:
+  #   avp.kubernetes.io/path: "kv/data/vplugin/supersecret1"
 type: Opaque
 stringData:
   username: <username>
