--- a/secret.yaml
+++ b/secret.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: example-secret
-  # annotations:
-  #   avp.kubernetes.io/path: "kv/data/vplugin/supersecret1"
+  annotations:
+    avp.kubernetes.io/path: "kv/data/vplugin/supersecret1"
 type: Opaque
 stringData:
   username: <username>
