--- a/secret.yaml
+++ b/secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: example-secret
+  name: dl-storage-secret-test
   annotations:
-    avp.kubernetes.io/path: "kv/data/vplugin/supersecret"
+    avp.kubernetes.io/path: "kv/digitallocker/staging/dl-storage"
 type: Opaque
 stringData:
-  username: <username>
-  password: <password>
+  password: <adminPassword>
+  username: <adminUsername>
