--- a/secret.yaml
+++ b/secret.yaml
@@ -4,6 +4,7 @@ metadata:
   name: dl-storage-secret-test
   annotations:
     avp.kubernetes.io/path: "kv/data/digitallocker/staging/dl-storage"
+    avp.kubernetes.io/secret-version: "2"
 type: Opaque
 stringData:
   password: <adminPassword>
